--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 /* common css */
 
 body {
-    font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
+}
+/* header css */
+header {
 }
