--- a/style.css
+++ b/style.css
@@ -1,8 +1,53 @@
 /* common css */
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
+  width: 80%;
+  margin: auto;
+}
+button {
+  border: none;
+  background: none;
+  font-family: "Roboto", sans-serif;
+  font-size: 7px;
+  padding: 5px;
+  font-weight: 500;
+}
+a {
+  text-decoration: none;
+  color: #fff;
 }
 /* header css */
 header {
+  display: flex;
+}
+header .header-left h2 {
+  color: #121212;
+}
+header .header-left {
+  margin: 10px;
+}
+header .header-left p {
+  font-weight: 0.5px;
+  color: #707070;
+}
+.header-left .button-div {
+  display: flex;
+}
+.header-left .button-div .btn-1 {
+  background-color: #ff5959;
+  color: #fff;
+
+  border-radius: 2px;
+}
+#btn-2 {
+  color: rgb(14, 13, 13) !important;
+  background-color: #fff;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  border-radius: 5px;
+  margin-left: 10px;
+}
+header .header-right img {
+  width: 120%;
 }
