--- a/style.css
+++ b/style.css
@@ -94,3 +94,73 @@ input[type="text"]:focus {
   font-size: 5px;
   text-align: center;
 }
+
+/* donate plan css */
+.donate-plan {
+  margin-top: 50px;
+}
+.donate-plan h4 {
+  text-align: center;
+}
+.donate-plan p {
+  text-align: center;
+  font-size: 10px;
+}
+.donate-cards {
+  display: flex;
+}
+.donate-cards .cards {
+  width: 30%;
+  margin: 10px;
+  text-align: center;
+}
+
+.donate-cards .cards img {
+  width: 20px;
+  margin-top: 5px;
+  margin-bottom: 0;
+}
+.donate-cards .cards h4 {
+  margin-top: 2px;
+  margin-bottom: 0;
+  font-size: small;
+}
+.donate-cards .cards p {
+  font-size: 7px;
+  width: 80%;
+  text-align: center;
+  margin-top: -2px;
+  padding: 15px 12px;
+}
+.donate-cards .card-1 {
+  background-color: rgba(79, 157, 166, 0.2);
+}
+.donate-cards .card-2 {
+  background-color: rgba(255, 89, 89, 0.2);
+}
+.donate-cards .card-3 {
+  background-color: rgba(255, 244, 214, 0.6);
+}
+/* contribute section css */
+.contribute {
+  display: flex;
+  margin-top: 50px;
+}
+.contribute .con-left {
+  width: 40%;
+  margin-left: 20px;
+}
+.contribute .con-right {
+  width: 40%;
+  margin-left: 100px;
+}
+
+.contribute img {
+  width: 100%;
+}
+.contribute h4 {
+  font-size: medium;
+}
+.contribute p {
+  font-size: x-small;
+}
